Fixed word wrapping.

--- a/themes/beautifulhugo/static/css/main.css
+++ b/themes/beautifulhugo/static/css/main.css
@@ -275,10 +275,6 @@ img[src*="#750"] {
 
 /* Multi-level navigation links */
 
-.word-break {
-  word-break: break-all;
-}
-
 .navbar-custom .nav .navlinks-container {
   position: relative;
 }
